Bug 302773 - Gwenview Seekbar/Controls are half hidden on inital Video load.
Summary: Gwenview Seekbar/Controls are half hidden on inital Video load.
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.9
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-29 23:25 UTC by Ezra Sharp
Modified: 2013-01-07 23:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.0
Sentry Crash Report:


Attachments
Image of bug in action. (130.85 KB, image/png)
2012-06-29 23:26 UTC, Ezra Sharp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ezra Sharp 2012-06-29 23:25:26 UTC
Normally browsing photos and videos, opening a video plays the video as normal, but half the video controls are hidden either by the thumbnail bar or the controls are aligned incorrectly. Resizing the thumbnail bar fixes the issue. 

However the bug also appears when the thumbnail bar is hidden. The bug is consistant when switching between videos and photos. 

Reproducible: Always

Steps to Reproduce:
1. Open a folder with Gwenview
2. Click on a video to play it
3. Mouse over bottom of view to reveal controls
3. View the video controls in their position.
Actual Results:  
As described/pictured. 

Expected Results:  
As described/pictured.
Comment 1 Ezra Sharp 2012-06-29 23:26:26 UTC
Created attachment 72225 [details]
Image of bug in action.
Comment 2 Aurelien Gateau 2012-11-29 17:02:42 UTC
Git commit a895c45f97cab6824ca8b02da6161723b1b01c23 by Aurélien Gâteau.
Committed on 29/11/2012 at 18:01.
Pushed by gateau into branch 'KDE/4.9'.

Fix video hud sometimes showing half hidden

M  +4    -3    lib/graphicswidgetfloater.cpp

http://commits.kde.org/gwenview/a895c45f97cab6824ca8b02da6161723b1b01c23