Fix video hud sometimes showing half hidden

BUG: 302773